# ChangeLog for Gentoo Linux Installer
# Copyright 2005 Gentoo Technologies, Inc.

dialogfe (05 Jan 2005):

  29 Apr 2005; Preston Cody <codeman@gentoo.org>
  Patches from chotchki (bug #90325) to improve CC networking.  untested.
  
  29 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Proxies patch from chotchki (bug #90147)

  6 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Patch from zahna to have default option increment in main menu.

  4 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  New timezone function. Minor modifications to set_timezone() from zahna

  1 Apr 2005; Preston Cody <codeman@gentoo.org>
  Added format and type options to existing partitions.
  
  30 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Slightly modified patch from zahna to default to current architecture.

  29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  kernel_args -> bootloader_kernel_args

  26 Mar 2005; Preston Cody <codeman@gentoo.org>
  ow my colon is missing.
  fixed prompts in partitioning
  added GENTOO_MIRRORS and SYNC options to make.conf
  fixed comma on users. changed kernel to not ask for genkernel if doing livecd
  
  25 Mar 2005; Preston Cody <codeman@gentoo.org>
  added another patch from zahna for portage tarball selection.
  Added a choice for local_install which determines error checking on tarballs
  and whether to use existing partitions by default.
  local_install also checks the custom_kernel_config_uri

  24 Mar 2005; Preston Cody <codeman@gentoo.org>
  Added hostname, domainname, and nisdomainname to networking list.
  Added a stage_tarball selection patch from zahna.

  23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed crash bug if you cancel from the partition type selection menu. Added
  timezone patch from zahna.

  21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Removed get_random_salt() function and replaced calls to crypt.crypt()
  with calls to GLIUtility.hash_password()

  21 Mar 2005; Preston Cody <codeman@gentoo.org>