@@ -234,15 +234,16 @@ def set_install_stage():
 
 def set_portage_tree():
 # This section will ask whether to sync the tree, whether to use a snapshot, etc.
-	menulist = ["Normal 'emerge sync'", "Webrsync (rsync is firewalled)", "None (local snapshot or NFS mount)"]
+	menulist = ["Normal 'emerge sync'", "Webrsync (rsync is firewalled)", "Snapshot (using a portage snapshot)", "None (NFS mount)"]
 	code, portage_tree_sync = d.menu("How do you want to sync the portage tree?", choices=dmenu_list_to_choices(menulist))
 	if code != DLG_OK: return
 	portage_tree_sync = menulist[int(portage_tree_sync)-1]
 	#FIX ME when python 2.4 comes out.
 	if portage_tree_sync == "Normal 'emerge sync'": install_profile.set_portage_tree_sync_type(None, "sync", None)
 	if portage_tree_sync == "Webrsync (rsync is firewalled)": install_profile.set_portage_tree_sync_type(None, "webrsync", None)
-	if portage_tree_sync == "None (local snapshot or NFS mount)":
-		install_profile.set_portage_tree_sync_type(None, "custom", None)		
+	if portage_tree_sync == "None (NFS mount)": install_profile.set_portage_tree_sync_type(None, "none", None)
+	if portage_tree_sync == "Snapshot (using a portage snapshot)":
+		install_profile.set_portage_tree_sync_type(None, "snapshot", None)		
 		snapshot_options = ("Use Local", "Specify URI")
 		code, snapshot_option = d.menu("Select a local portage snapshot or manually specify a location:", choices=dmenu_list_to_choices(snapshot_options))
 		snapshot_option = snapshot_options[int(snapshot_option)-1]
