@@ -7,7 +7,8 @@ dialogfe (05 Jan 2005):
   Patches from chotchki (bug #90325) to improve CC networking.  untested.
   
   29 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
-  Proxies patch from chotchki (bug #90147)
+  Proxies patch from chotchki (bug #90147). Split 'custom' sync option into
+  'snapshot' and 'none'.
 
   6 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Patch from zahna to have default option increment in main menu.
